# cothink-system

./: .bazelignore  .bazelrc  .cothink_hooks  .cothink_hooks.example  .cothink_profile  .gitignore  ANDROID.md  BUILD.bazel  COTHINK_SHELL_HOOKS.md  CRYPTO_PROTOCOL_README.md  Cargo.toml  GRAPHICS_SHELL_README.md  MODULE.bazel  QUICKSTART.py  README.md  WORKSPACE.bzlmod  agent.lua  agent.pl  agent.py  arc_defs.rs  classifier  classifier-test  classifier.rs  classifier_test  cothink-shell  crypto_cli.py  crypto_integration.py  crypto_protocols.py  crypto_test_suite.py  crypto_visualizer.py  data_struct.rs  deterministic_crypto.py  evdev.sh  go.mod  graphics_shell.py  graphics_shell_cli.py  graphics_shell_examples.py  graphics_shell_utils.py  hidraw.sh  input_device_monitor.py  (+25 more)
cothink/: classifier  cothink.go  cothink_test.go  history.go  semaphore.go  spawn.go
input_monitor/: __init__.py  core.py  models.py  ui.py
input_monitor/ui/: __init__.py
java/com/cothink/system/: AndroidManifest.xml  BUILD.bazel  MainActivity.java
java/com/cothink/system/core/: AgentNode.java  Classifier.java  DynamicSemaphore.java  HistoryTracker.java  Orchestrator.java  SpiralAllocator.java  SystemMetrics.java
java/com/cothink/system/res/layout/: main_activity.xml
java/com/cothink/system/res/menu/: menu.xml
java/com/cothink/system/res/values/: colors.xml  strings.xml
javatests/com/cothink/system/core/: BUILD.bazel  ClassifierTest.java  OrchestratorTest.java  SpiralAllocatorTest.java
main/: json_client.go  json_server.go  main.go
pts/database-1.3.13/: suite-definition.xml
pts/llm-1.0.3/: suite-definition.xml
pts/machine-learning-1.3.10/: suite-definition.xml
pts/video-encoding-1.3.5/: suite-definition.xml
scripts/: build_android.sh  run_tests.sh
src/: data_struct.rs  history.rs  lib.rs  main.rs  pipeln_seq_io.rs
thermalopt/: thermalopt.go
tools/: debug.keystore
