[package]
name = "cothink-system"
version = "0.1.0"
edition = "2024"

[lib]
name = "cothink_system"
path = "src/lib.rs"

[[bin]]
name = "cothink-system"
path = "src/main.rs"

[[bin]]
name = "classifier"
path = "src/bin/classifier.rs"

[[bin]]
name = "thermal_monitor"
path = "src/bin/thermal_monitor.rs"

[dependencies]
deep_causality = "0.15.0"
grpc = "0.9.0"
hickory-resolver = "0.26.1"
inference = "0.3.0"
subjective-time-expansion = "0.1.2"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "time", "process", "io-util", "net"] }

[profile.release]
debug = true

